* Changing it from being a plugin by default as we can't guarantee it'll intercept the providers, requires some user intervention to make sure it's setup right * Updating readme to reflect above * Fixing use statement

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "keltiecochrane/themosis-view",
   "description": "A plugin that overrides some default blade behaviour for Themosis",
-  "keywords": ["themosis", "plugin"],
+  "keywords": ["themosis"],
   "authors": [
     {
       "name": "Daniel Gadd",
@@ -14,7 +14,6 @@
       "homepage": "https://keltiecochrane.com"
     }
   ],
-  "type": "wordpress-plugin",
   "repositories": [
     {
       "type": "composer",
